# SaberEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
.cache/clangd/index/: Application.cpp.34844CDB43F8C685.idx  Application.cpp.51C0D854D4C1A95F.idx  Application.cpp.CE1B906898B1898A.idx  Application.h.6EEF45126423A97C.idx  Application.h.7C71579A081D1D11.idx  Application.h.F5A8F0D520C03F4D.idx  ApplicationEvent.h.4D811A346C643EDD.idx  Buffer.cpp.209B471244457554.idx  Buffer.h.85FD068477C7E13F.idx  Camera.h.2E3CF40FA94CEE57.idx  Core.h.8C857978C24BA586.idx  Core.h.C0149B16C038DE4E.idx  EntryPoint.h.56FB459C3B75CFB7.idx  EntryPoint.h.D721BEA56D6FF165.idx  Event.h.54E70226CAB2345A.idx  ExampleLayer.cpp.9ED25EB21646BF4D.idx  ExampleLayer.cpp.D2509BE7DA50D400.idx  ExampleLayer.h.982CCCCD2F6BAC3F.idx  ExampleLayer.h.E495C94A278412ED.idx  Framebuffer.cpp.0D67D9C79381230A.idx  Framebuffer.h.B6A99EB5BBC80AD4.idx  GraphicsContext.cpp.F52582A098D3FDB9.idx  GraphicsContext.h.D36F7D36BC2ED98D.idx  ImGuiBuild.cpp.C9C1BD52E9DFF032.idx  ImGuiLayer.cpp.C4ABA643B6AF9656.idx  ImGuiLayer.h.582880E25E4F870E.idx  Input.h.C2651976F75982F6.idx  Instrumentor.h.AD6A06029A843D90.idx  KeyCodes.h.D20CE3C66413966F.idx  KeyEvent.h.20791C360DA7285E.idx  Layer.cpp.B07234B078AE34CE.idx  Layer.cpp.DB146B6BEBEFC63D.idx  Layer.h.312E8466D6F51385.idx  Layer.h.4EFA0D8BB3195EBF.idx  (+383 more)
Engine/: CMakeLists.txt
Engine/src/: CMakeLists.txt  Renderer3DExample.cpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Saber/: Saber.h  pch.h
Engine/src/Saber/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.cpp  Window.h
Engine/src/Saber/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Saber/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Saber/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Light.cpp  Light.h  LightingExample.cpp  LightingExample.h  OpenGLRendererAPI.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: BlinnPhong3D.glsl  FlatColor.glsl  Texture.glsl  Texture3D.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  main.cpp
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  spdlog.pc
build_debug/Engine/: cmake_install.cmake
build_debug/Sandbox/: cmake_install.cmake
docs/: BlinnPhongLighting.md
(+10 files in other folders)
